delete knowBase create Stage